--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.2",
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.11",
     "typescript": "^4.9.5",
